kubernetes/clusters/live/config/vaultwarden/internal-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-internal
  namespace: vaultwarden
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Vaultwarden"
    gethomepage.dev/group: "Apps"
    gethomepage.dev/icon: "vaultwarden.svg"
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "vault.${internal_domain}"
  rules:
    - backendRefs:
        - name: vaultwarden
          port: 80
